# multimonitorfullscreen

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
