cmake_minimum_required(VERSION 3.5)

project(multimonitorfullscreen VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets X11Extras)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets X11Extras)

set(PROJECT_SOURCES
        main.cpp
        mainwindow.cpp
        mainwindow.h
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(multimonitorfullscreen
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
else()
    add_executable(multimonitorfullscreen
        ${PROJECT_SOURCES}
    )
endif()

target_link_libraries(multimonitorfullscreen PRIVATE
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::X11Extras
    "-lXi" "-lXrender" "-lXcursor" "-lXext" "-lX11"
)

include(GNUInstallDirs)
install(TARGETS multimonitorfullscreen
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(multimonitorfullscreen)
endif()
